# language-learn

./: .deploy-target  .dockerignore  .env.example  .gitignore  .woodpecker.yml  CLAUDE.md  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  .gitignore  README.md  alembic.ini  openapi.json  pyproject.toml
backend/scripts/: docker-entrypoint.sh  migrate.sh
backend/src/polyglot_atlas/: __init__.py  config.py  db.py  errors.py  logging.py  main.py  openapi.py
backend/src/polyglot_atlas/alembic/: env.py
backend/src/polyglot_atlas/alembic/versions/: 0001_initial.py  0002_vocab_state.py
backend/src/polyglot_atlas/api/: __init__.py  dictionary.py  health.py  reading.py  vocab.py
backend/src/polyglot_atlas/models/: __init__.py  base.py  dictionary.py  vocab_state.py
backend/src/polyglot_atlas/repositories/: __init__.py  dictionary.py  vocab.py
backend/src/polyglot_atlas/schemas/: __init__.py  common.py  dictionary.py  reading.py  vocab.py
backend/src/polyglot_atlas/seed/: __init__.py  dictionary.py
backend/src/polyglot_atlas/services/: __init__.py  dictionary.py  morphology.py  vocab.py
backend/tests/: test_config.py  test_dictionary_contract.py  test_health.py  test_reading.py  test_vocab_contract.py
chats/: chat1.md  chat2.md  chat3.md
docs/: dictionary.md  phonetics-feedback-plan.md  vocabulary-plan.md
project/: The Grammar Engine - Japanese.html  The Polyglot's Atlas - Aburaya.html  The Polyglot's Atlas.html  aburaya.css  app.aburaya.jsx  app.jsx  data.jsx  drawer.jsx  folio.jsx  grammar-app.jsx  grammar-data.jsx  grammar.css  home.jsx  loom.jsx  spider.jsx  styles.css  track4.jsx  verbdial.jsx
project/uploads/: the-polyglots-atlas.md
scripts/: ci-precheck.sh  smoke-deployed.sh
src/: App.jsx
src/api/: client.js  schema.d.ts
src/components/: HagaSpotlight.jsx  LoomInstrument.jsx  VerbDial.jsx
tools/: seed-dictionary.mjs
(+156 files in other folders)
