[project]
name = "polyglot-atlas-api"
version = "0.1.0"
description = "The Polyglot's Atlas backend — dictionary + per-learner vocab state API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot_atlas"]

# --- Ruff: lint + format (replaces flake8/isort/black/pyupgrade) ---
[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID", "RUF"]
# This is a CJK/multilingual codebase — "ambiguous" Unicode (CJK punctuation,
# typographic quotes, fullwidth chars) is the content, not a mistake.
# TID252: relative intra-package imports are idiomatic here (keeps the package
# portable); we don't ban them.
ignore = ["RUF001", "RUF002", "RUF003", "TID252"]
# Alembic migrations are templated; don't fight their import style.
[tool.ruff.lint.per-file-ignores]
"src/polyglot_atlas/alembic/**" = ["E501", "I001"]

# --- mypy: strict, with the Pydantic plugin ---
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests"]
# Alembic's generated env/versions aren't worth strict-typing.
exclude = "(^|/)alembic/"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
